--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,8 +142,8 @@ header.sticky-header .nav-menu > ul > li  {
     color: #d94934;
 }
 
-.active {
-    color: #d94934 !important;
+.d9 {
+    color: #d94934;
 }
 
 .btn-small,
